--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
     "modern-normalize": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "uuid": "^8.3.2",
@@ -25,7 +28,8 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --delay 500 --port 4040 --watch  db.json"
   },
   "eslintConfig": {
     "extends": [
